tests de conflictos

--- a/Práctica Parte I.Rmd
+++ b/Práctica Parte I.Rmd
@@ -13,16 +13,21 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r}
 datos <- read.delim("prostate.data", header = TRUE, sep = "\t")
 
+#test de conflictos
+
 datos <- datos[, -ncol(datos)] # eliminamos la columna "train"
 
-
+attach(datos)
 
 dim(datos)
 
 names(datos)
 
+colnames(datos) <- as.character(datos[1, ])
 
-str(datos)
+datos <- datos[-1, ]
+
+str(datos) # hay 11 variables, la 1 es de tipo int y las demás de tipo 'chr'
 
 # hay una columna de ids
 
@@ -30,7 +35,7 @@ datos <- datos[, -1]
 
 str(datos)
 
-attach(datos)
+
 
 datos$lcavol <- as.numeric(lcavol)
 
