--- a/Práctica Parte I.Rmd
+++ b/Práctica Parte I.Rmd
@@ -13,19 +13,13 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r}
 datos <- read.delim("prostate.data", header = TRUE, sep = "\t")
 
-#test de conflictos
-
 datos <- datos[, -ncol(datos)] # eliminamos la columna "train"
 
 dim(datos)
 
 names(datos)
 
-colnames(datos) <- as.character(datos[1, ])
-
-datos <- datos[-1, ]
-
-str(datos) # hay 11 variables, la 1 es de tipo int y las demás de tipo 'chr'
+str(datos) # hay 11 variables,
 
 # hay una columna de ids
 
@@ -45,6 +39,7 @@ sum(is.na(datos)) # no hay na
 summary(datos) # no estan estandarizadas, aun no es necesario
 
 # algunas estan en log porque el rango es muy amplio
+
 ```
 
 #2
@@ -88,10 +83,6 @@ porcentaje.cd <- num.d / (num.c) * 100
 
 tabla <- table(svi, gleason)
 
-
-
-
-chi_square_test <- chisq.test(tabla) # ???
 ```
 
 #4
