--- a/Práctica Parte I.Rmd
+++ b/Práctica Parte I.Rmd
@@ -9,34 +9,23 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-#1
+# 0. Cargamos los datos y eliminamos la columna train
 ```{r}
-datos <- read.delim("prostate.data", header = TRUE, sep = "\t")
+# Cargamos los datos con separador de tabulador
+datos <- read.delim("prostate.data.txt", header = TRUE, sep = "\t")
 
-#test de conflictos
+# Eliminamos la columna train
+datos <- datos[, -ncol(datos)]
 
-datos <- datos[, -ncol(datos)] # eliminamos la columna "train"
-
+# Veeos la estructura de los datos
 dim(datos)
-
 names(datos)
+str(datos)
 
-colnames(datos) <- as.character(datos[1, ])
-
-datos <- datos[-1, ]
-
-str(datos) # hay 11 variables, la 1 es de tipo int y las demás de tipo 'chr'
-
-# hay una columna de ids
-
+# Eliminamos la columna de identificador del paciente
 datos <- datos[, -1]
 
 str(datos)
-
-
-
-
-
 
 
 sum(is.na(datos)) # no hay na
