--- a/Practica Parte I.Rmd
+++ b/Practica Parte I.Rmd
@@ -95,11 +95,12 @@ addmargins(prop.table(tabla,2),1)*100
 # 4
 
 ```{r}
+
 recta <- lm(lpsa ~ lcavol)
 
 summary(recta)
 
-plot(lcavol, lpsa)
+plot(lcavol, lpsa, main='lpsa vs lcavol')
 abline(recta, col = "red")
 
 confint(recta, level = 0.95)
@@ -135,38 +136,60 @@ summary(rectaMul)
 
 library(glmnet)
 
-x <- model.matrix(lpsa~.,datos.num)[,-1]
 
-names(datos.num)
+x <- model.matrix(lpsa~.,datos.num)[,-1] #variables numericas
 
-y <- datos$lpsa
+y <- datos.num$lpsa #variable de salida
 
-train <- sample(1:nrow(datos), nrow(datos)/2)
+set.seed(1)
+
+train <- sample(1:nrow(x), nrow(x)/2) #filas de entrenamiento
 
 test <- (-train)
 
-malla <- 10^seq(10,-2,length=100)
 
-ridge.train <- glmnet(x[train,],y[train],alpha=0,lambda=malla,thresh = 1e-12)
+y.test <- y[test]
 
-betas <- ridge.train$beta
+malla <- 10^seq(10,-2,length=100) #mallado de lambdas
 
-lambdas <- ridge.train$lambda
+malla.ridge.train <- glmnet(x[train,],y[train],alpha=0,lambda=malla) # regresion ridge sin CV con conjunto de entrenamiento
 
-ncol(datos)
-
-for (i in 1:ncol(x)){
-  
-  plot(log(lambdas),betas[i,])
-  
-}
+plot(malla.ridge.train,xvar="lambda" ) # plot de betas vs log(lambda)
 
 
 
+cv.out.train <- cv.glmnet(x[train,],y[train],alpha=0)  # regresion ridge con CV con conjunto de entrenamiento
 
-cv.out <- cv.glmnet(x[train,],y[train],alpha=0)
+bestlam.train<-cv.out.train$lambda.min  #lambda que minmiza el MSE
 
-plot(cv.out)
+bestlam.train
+
+ridge.train<-glmnet(x[train,],y[train],alpha=0, lambda=bestlam.train) #regresion ridge con CV con mejor lambda en conjunto de entrenamiento
+
+coef(ridge.train)[,1]
+
+rectaMul.train <- glmnet(x[train,],y[train],alpha=0, lambda=0)  # regresion multiple con datos de entrenamiento
+
+coef(rectaMul.train)[,1]
+
+#el intercept es mayor en ridge
+# beta de lcp mayor en ridge
+# los demas betas son menores en ridge
+
+plot(cv.out.train)  #MSE vs log(lambda)
+
+ridge.pred <- predict(ridge.train,newx=x[test,]) # predicion de 'ridge.train' en conjunto de testeo
+
+
+
+mean((ridge.pred-y.test)^2) #MSE estimado de Ridge
+
+
+rectaMul.pred <- predict(rectaMul.train,newx=x[test,])
+
+mean((rectaMul.pred-y.test)^2) #MSE estimado de rectaMul
+
+# El MSE de la regresion multiple de Ridge es menor que la de rectaMul
 
 ```
 
